@@ -1,3 +1,11 @@
+Mon Jan  8 12:00:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Select_Reactor_T.cpp:
+          Const improvement
+
+        * ace/Select_Reactor_T.h :
+          Also use ACE_DISABLE_NOTIFY_PIPE_DEFAULT in the constructors
+
 Mon Jan  8 11:23:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Select_Reactor_T.h (open):
